--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ div {
 	top: 1012px;
 }
         </style>
+        
     </head>
     <body>	
         <Div id="contenidos">
@@ -293,7 +294,21 @@ div {
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades" class="menu">Actividades</a></li>
                 <li><a href="autores" class="menu">Autores</a></li>
-                <div id="apDiv19"><center><a href="http://www.cerotec.net/estadisticas-81963/ferjaher.github.io" title="Contador de visitas"><img src="http://www.cerotec.net/contador.php?t=1&s=3&i=81963" alt="Contador de visitas y estadísticas"></a> </center></div>
+                <div id="apDiv19"><center><script language="javascript">
+count= getcookie("counter");
+if(isNaN(count)){
+y=setcookie('counter',0,1);
+count=0;
+}
+count++;
+document.write("Visitastes esta pagina "+count+ " veces!!");
+y=setcookie('counter',count,1);
+// fin de obtencion de cookie
+// -->
+</script>
+<FORM action="">
+<INPUT TYPE="SUBMIT" onclick="setcookie('counter',0,-1);" value="Elminar cookies">
+</FORM> </center></div>
                 <div id="apDiv4"><a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook" 				border="0" src="img/facebook_aqu_32.png" alt="Facebook" /></a><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src=			 "img/youtube.png" alt="YouTube" title="Twitter" border="0" /></a><span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=			 "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span></div>
                  <div id="apDiv3">    
                	   <form method="get" action="http://www.google.es/search">
