--- a/actividades.html
+++ b/actividades.html
@@ -11,7 +11,17 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
-     </head>
+        <style type="text/css">
+        #apDiv28 {
+	position: absolute;
+	width: 762px;
+	height: 59px;
+	z-index: 13;
+	left: -36px;
+	top: 240px;
+}
+        </style>
+    </head>
     <body>	
         <Div id="contenidos">
             <header>
@@ -60,9 +70,18 @@
                    </form>
                 </div>
     </nav>
-            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
-    <section>
-    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
+            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
+    <div id="apDiv28"><ul class="dropdownmenu">
+  
+    <li><a href="quiz.html">Cuestionario</a></li>
+    <li><a href="sopa.html">Sopa  de Letras</a></li>
+    <li><a href="crucigrama.html">Crucigrama</a>
+      <li><a href="completar.html">Completar textos</a></li>
+    <li><a href="relacionar.html">Relacionar respuestas</a></li>
+  </ul>
+</div>
+<section>
+  
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
