--- a/actividades.html
+++ b/actividades.html
@@ -14,11 +14,21 @@
         <style type="text/css">
         #apDiv28 {
 	position: absolute;
-	width: 762px;
-	height: 59px;
+	width: 713px;
+	height: 44px;
 	z-index: 13;
-	left: -36px;
+	left: 0px;
 	top: 240px;
+	border-radius: 10px 0px 0px 0px;
+	background-color: #003F5E;
+}
+        #apDiv43 {
+	position: absolute;
+	width: 124px;
+	height: 115px;
+	z-index: 14;
+	left: 84px;
+	top: 322px;
 }
         </style>
     </head>
@@ -73,25 +83,26 @@
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
     <div id="apDiv28"><ul class="dropdownmenu">
   
-    <li><a href="quiz.html">Cuestionario</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
     <li><a href="sopa.html">Sopa  de Letras</a></li>
     <li><a href="crucigrama.html">Crucigrama</a>
-      <li><a href="completar.html">Completar textos</a></li>
+      <li><a href="completar.html">Completar</a></li>
     <li><a href="relacionar.html">Relacionar respuestas</a></li>
   </ul>
 </div>
 <section>
   
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+  <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                    <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
+                    <figure><br><br>
+    <h2>Módulo de Actividades</h2>
+
+                        <div id="apDiv43"><img src="img/flecha.png" width="116" height="116"></div>
+                        <img src="img/integracion.png" alt="Diseno">
                   	</figure>
                     <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
+                  En esta sección encontrarás cinco activodades interactivas, en las cuales pondrás a prueba tus conocimientos básicos sobre Seguridad Informática: Quiz, Sopa de letras, Crucigrama, Completar textos y oraciones y Relacionar respuestas conceptuales. </p>
+                    <p><strong>Ddar clic en el boton de la acticvidad deseada!.! Mucha Suerte!</strong><br>
                     </p>
       			</article>
     </section>
