--- a/actividades/quiz_frame.htm
+++ b/actividades/quiz_frame.htm
@@ -1852,8 +1852,8 @@ function DownTime(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Cuestionario </h2>
-	<h2 class="ExerciseTitle">Respuesta m&#x00FA;ltiple</h2>
+	<h2 class="ExerciseTitle">Quiz </h2>
+	<h2 class="ExerciseTitle">Respuesta de selecci&oacute;n m&#x00FA;ltiple</h2>
 
 
 <div id="Timer"><span id="TimerText">&nbsp;&nbsp;</span></div>
