--- a/actividades/relacionar_frame.htm
+++ b/actividades/relacionar_frame.htm
@@ -1584,7 +1584,7 @@ function DownTime(){
 <!-- BeginTopNavButtons --><!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Relacionar Textos</h2>
+	<h2 class="ExerciseTitle">Relacionar Respuestas</h2>
 	<h2 class="ExerciseTitle">Arrastrar cada respuesta al objetivo correcto</h2>
 
 
