--- a/actividades/sopa_final2.htm
+++ b/actividades/sopa_final2.htm
@@ -23,14 +23,15 @@ para otros usos contacte con el autor-->
 </head>
 <body onLoad="loadPage()" onbeforeunload="unloadPage()" onUnload="unloadPage()">
 <div id="ardoraMain">
-<div id="ardoraEnu">Sopa de Letras<br>
+<div id="ardoraEnu"><SPAN style="font-size: 18px; color: #000000">Realizar la siguiente sopa de letras</SPAN><br>
 </span></div>
   <div id="ardoraAct">
-<canvas id="ardoraActBoard" width="100px" height="100px"></canvas>
-<canvas id="ardoraActSel" width="100px" height="100px"></canvas>
+<canvas id="ardoraActBoard" width="990px" height="600px"></canvas>
+<canvas id="ardoraActSel" width="990px" height="600px"></canvas>
 <canvas id="ardoraActCanvas" width="2px" height="2px"></canvas>
   </div>
 <div id="ardoraTab">
+  <canvas id="ardoraTabCanvas" width="70" height="88"></canvas>
 </div></div>
 <div id="ardoraAlumSCORM"><p></p></div>
 </body></html>
