--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
-     </head>
+        <style type="text/css">
+        #apDiv43 {
+	position: absolute;
+	width: 636px;
+	height: 385px;
+	z-index: 16;
+	left: 32px;
+	top: 1207px;
+}
+        </style>
+    </head>
     <body>	
         <Div id="contenidos">
             <header>
@@ -19,9 +29,9 @@
                   <div id="apDiv24">OVA Para curso Seguridad Informática - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
-        	<p>&nbsp;</p>
-   			<p>&nbsp;</p>
-            <p>&nbsp;</p>
+   	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+    <p>&nbsp;</p>
     		<nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
@@ -32,7 +42,7 @@
                 <div id="apDiv19">
                 <center>
                 	<div id="cuentavisitas"></div>
-						<script>yu=function(id){return document.getElementById(id);}
+				  <script>yu=function(id){return document.getElementById(id);}
 							if(localStorage){
 							if(localStorage['visitas']==undefined){
 							localStorage['visitas']=0;
@@ -61,20 +71,53 @@
                 </div>
     </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
+    
     <section>
-    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
+    <br><br>
+    <h2>Curso de Seguridad Informática</h2>
+    <div id="apDiv31"><br>
+    </div>
+    <div id="apDiv32">Inicio</div>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-                <article>
-                    <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
-                  	</figure>
-                    <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
-                    </p>
-      			</article>
+     <div style="height: 620px;width: 713px; overflow-y: auto; "> <article>
+        <p>
+            <strong>Descripción del curso:</strong><br>
+            En la actualidad los recursos informáticos y el uso de nuevas tecnologías para el procesamiento de
+            información hacen parte de todas las organizaciones, y temas como seguridad en la información cobran 
+            más vigencia.<br>
+            El curso de Seguridad informática, pretende orientar a los estudiantes en los fundamentos de seguridad
+            de la información, comprender las necesidades de proteger, salvaguardar la información de las empresas
+            y mantener disponibles los servicios de redes y comunicaciones.<br>
+            En la unidad 1, Fundamentos de seguridad de la información; presenta los conceptos fundamentales
+            necesarios para la comprensión de la seguridad, de los actores de la inseguridad, la necesidad de
+            prevenir incidentes, los diferentes tipos de amenazas, la Criptografía, los conceptos básicos de seguridad
+            en sistemas operativos. La segunda unidad Estándares y Normatividad, presenta las normas internacionales de mejores prácticas
+          en aplicación de la seguridad informática, como ISO 27000, el análisis de riesgos y la gestión de riesgos
+          y los conceptos básicos de auditoria de sistemas informáticos.<br>
+          La tercera unidad Seguridad en Redes, propone la temática referente a controles lógicos y
+          perimetrales, técnicas de ataques a los sistemas de información, técnicas de verificación, chequeos y
+        penetración como análisis de vulnerabilidades.</p>
+        <p><strong>Propósitos del curso:</strong><br>
+       . Afianzar y Fortalecer en el estudiante con los fundamentos teórico-prácticos sobre seguridad
+          informática básica al estudiante, que le permita comprender los aspectos más relevantes en entornos reales.<br>
+        </p>
+        <p><strong>Competencias generales  del curso:</strong><br>
+        . El estudiante adquiere conceptos sobre seguridad de la información, desarrolla las habilidades para
+          la identificación de vulnerabilidades, amenazas y riesgos de seguridad informáticos y de la información.<br>
+. El estudiante conoce e identifica los estándares que debe usar para los procesos de análisis,evaluación y gestión de los riesgos y los estándares de buenas prácticas que ayudarán a identificar
+        los controles que deben existir en las organizaciones de acuerdo a esas buenas prácticas.<br>
+. El estudiante adquiere los conceptos fundamentales para de identificar debilidades en los sistemas
+          operativos y de red, los tipos de control existentes y su integración dentro de las políticas y
+          procedimientos para la estructuración de Sistemas de gestión de seguridad de la información SGSI.<br>
+. El estudiante adquiere la capacidad de formular y elaborar informes y documentación sobre el
+          proceso de análisis, evaluación y gestión de riesgos, propuestas generales e implementación de
+          soluciones de acuerdo al estándar y metodología aplicados.<br>
+. El estudiante respeta los valores éticos y de seguridad en los escenarios donde se desempeña.</p>
+        <p><strong>Estructura  del curso:</strong></p>
+        <img src="img/grafico1.jpg" width="636" height="385">
+        <p><br>
+        </p>
+      </article></div>
     </section>
     <aside> 
                 <div id="apDiv5">
