--- a/relacionar.html
+++ b/relacionar.html
@@ -14,11 +14,13 @@
         <style type="text/css">
         #apDiv28 {
 	position: absolute;
-	width: 762px;
-	height: 59px;
+	width: 713px;
+	height: 44px;
 	z-index: 13;
-	left: -36px;
+	left: 0px;
 	top: 240px;
+	background-color: #003F5E;
+	border-radius: 10px 0px 0px 0px;
 }
         </style>
     </head>
@@ -73,16 +75,16 @@
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
     <div id="apDiv28"><ul class="dropdownmenu">
   
-    <li><a href="quiz.html">Cuestionario</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
     <li><a href="sopa.html">Sopa  de Letras</a></li>
     <li><a href="crucigrama.html">Crucigrama</a>
-      <li><a href="completar.html">Completar textos</a></li>
+      <li><a href="completar.html">Completar</a></li>
     <li><a href="relacionar.html">Relacionar respuestas</a></li>
   </ul>
 </div>
 <section>
   
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+  <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                   <p><center>
                     <iframe src='actividades/relacionar_frame.htm' width='700' height='600' frameborder='0'></iframe><br>
