--- a/autores.html
+++ b/autores.html
@@ -12,16 +12,7 @@
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
         <style type="text/css">
-        #apDiv28 {
-	position: absolute;
-	width: 713px;
-	height: 44px;
-	z-index: 13;
-	left: 0px;
-	top: 240px;
-	background-color: #003F5E;
-	border-radius: 10px 0px 0px 0px;
-}
+       
         </style>
     </head>
     <body>	
@@ -31,9 +22,9 @@
                   <div id="apDiv24">OVA Para curso Seguridad Informática - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
-        	<p>&nbsp;</p>
-   			<p>&nbsp;</p>
-            <p>&nbsp;</p>
+   	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+    <p>&nbsp;</p>
     		<nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
@@ -44,7 +35,7 @@
                 <div id="apDiv19">
                 <center>
                 	<div id="cuentavisitas"></div>
-						<script>yu=function(id){return document.getElementById(id);}
+				  <script>yu=function(id){return document.getElementById(id);}
 							if(localStorage){
 							if(localStorage['visitas']==undefined){
 							localStorage['visitas']=0;
@@ -72,25 +63,44 @@
                    </form>
                 </div>
     </nav>
-            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
-    <div id="apDiv28"><ul class="dropdownmenu">
-  
-    <li><a href="quiz.html">Quiz</a></li>
-    <li><a href="sopa.html">Sopa  de Letras</a></li>
-    <li><a href="crucigrama.html">Crucigrama</a>
-      <li><a href="completar.html">Completar</a></li>
-    <li><a href="relacionar.html">Relacionar respuestas</a></li>
-  </ul>
-</div>
-<section>
-  
-  <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-                <article>
-                  <p><center>
-                    <iframe src='actividades/quiz_frame.htm' width='700' height='600' frameborder='0'></iframe><br>
-                   </center>
-                    </p>
-      			</article>
+            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
+    <section>
+    <div id="apDiv31"><br>
+    </div>
+    <div id="apDiv32">Autores</div>
+    <div id="apDiv38"><p><strong>Luis Fernando Jaramillo H.</strong><br>
+                        Código: 9869838<br>
+                        Programa: Ingeniería de Sistemas<br>
+                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
+                        Skype: ferjaher<br></div>
+      <div id="apDiv39"><p><strong>Luis Fernando Jaramillo H.</strong><br>
+                        Código: 9869838<br>
+                        Programa: Ingeniería de Sistemas<br>
+                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
+      Skype: ferjaher<br></div>
+      <div id="apDiv40"><p><strong>Luis Fernando Jaramillo H.</strong><br>
+                        Código: 9869838<br>
+                        Programa: Ingeniería de Sistemas<br>
+                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
+      Skype: ferjaher<br></div>
+      <div id="apDiv41"><p><strong>Luis Fernando Jaramillo H.</strong><br>
+                        Código: 9869838<br>
+                        Programa: Ingeniería de Sistemas<br>
+                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
+      Skype: ferjaher<br></div>
+      <div id="apDiv42"><p><strong>Luis Fernando Jaramillo H.</strong><br>
+                        Código: 9869838<br>
+                        Programa: Ingeniería de Sistemas<br>
+                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
+      Skype: ferjaher<br></div>
+<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+      <article>
+        <div id="apDiv33"><img src="img/A1.jpg" width="112" height="115"></div>
+        <div id="apDiv34"><img src="img/A1.jpg" width="112" height="115"></div>
+        <div id="apDiv35"><img src="img/A1.jpg" width="112" height="115"></div>
+        <div id="apDiv36"><img src="img/A1.jpg" width="112" height="115"></div>
+        <div id="apDiv37"><img src="img/A1.jpg" width="112" height="115"></div>
+      </article>
     </section>
     <aside> 
                 <div id="apDiv5">
