--- a/lecturas2.html
+++ b/lecturas2.html
@@ -19,8 +19,8 @@
 	z-index: 13;
 	left: 0px;
 	top: 240px;
-	background-color: #003F5E;
 	border-radius: 10px 0px 0px 0px;
+	background-color: #003F5E;
 }
         </style>
     </head>
@@ -74,23 +74,36 @@
     </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
     <div id="apDiv28"><ul class="dropdownmenu">
-  
-    <li><a href="quiz.html">Quiz</a></li>
-    <li><a href="sopa.html">Sopa  de Letras</a></li>
-    <li><a href="crucigrama.html">Crucigrama</a>
-      <li><a href="completar.html">Completar</a></li>
-    <li><a href="relacionar.html">Relacionar respuestas</a></li>
-  </ul>
+  	
+    <li><a href="lecturas.html">Lectura 1</a></li>
+    <li><a href="lecturas2.html">Lectura 2</a></li>
+    <li><a href="lecturas3.html">Lectura 3</a>
+   </ul>
 </div>
 <section>
-  
+  <br><br><br>
+    <h2>Titulo lectura 2</h2>
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+                <div style="height: 620px;width: 713px; overflow-y: auto; ">
                 <article>
-                  <p><center>
-                    <iframe src='actividades/quiz_frame.htm' width='700' height='600' frameborder='0'></iframe><br>
-                   </center>
+                    <figure>
+                        <img src="img/diseno_web.jpg" alt="Diseno">
+                  	</figure>
+                    <p>
+                        Propósitos del curso:<br>
+                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
+                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
+                    • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
+                    <p>Propósitos del curso:<br>
+• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
+• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
+• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
+                    <p>Propósitos del curso:<br>
+• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
+• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
+• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
                     </p>
-      			</article>
+      			</article></div>
     </section>
     <aside> 
                 <div id="apDiv5">
