--- a/multimedia.html
+++ b/multimedia.html
@@ -19,8 +19,8 @@
 	z-index: 13;
 	left: 0px;
 	top: 240px;
-	background-color: #003F5E;
 	border-radius: 10px 0px 0px 0px;
+	background-color: #003F5E;
 }
         </style>
     </head>
@@ -86,9 +86,14 @@
   
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                  <p><center>
-                    <iframe src='actividades/quiz_frame.htm' width='700' height='600' frameborder='0'></iframe><br>
-                   </center>
+                    <figure>
+                        <img src="img/integracion.png" alt="Diseno">
+                  	</figure>
+                    <p>
+                        Propósitos del curso:<br>
+                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
+                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
+                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
                     </p>
       			</article>
     </section>
