--- a/autores.html
+++ b/autores.html
@@ -73,33 +73,37 @@
                         Programa: Ingeniería de Sistemas<br>
                         Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
                         Skype: ferjaher<br></div>
-      <div id="apDiv39"><p><strong>Luis Fernando Jaramillo H.</strong><br>
-                        Código: 9869838<br>
-                        Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
+      <div id="apDiv39">
+        <p><strong>Nombre Alumno 2.</strong><br>
+                        Código: <br>
+                        Programa: <br>
+                        Correo electrónico: <br>
+      Skype: <br></div>
+      <div id="apDiv40">
+        <p><strong>Nombre Alumno 3.</strong><br>
+                        Código: <br>
+                        Programa: <br>
+                        Correo electrónico: <br>
       Skype: ferjaher<br></div>
-      <div id="apDiv40"><p><strong>Luis Fernando Jaramillo H.</strong><br>
-                        Código: 9869838<br>
-                        Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
+      <div id="apDiv41">
+        <p><strong>Nombre Alumno 4.</strong><br>
+                        Código: <br>
+                        Programa: <br>
+                        Correo electrónico: <br>
       Skype: ferjaher<br></div>
-      <div id="apDiv41"><p><strong>Luis Fernando Jaramillo H.</strong><br>
-                        Código: 9869838<br>
-                        Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
-      Skype: ferjaher<br></div>
-      <div id="apDiv42"><p><strong>Luis Fernando Jaramillo H.</strong><br>
-                        Código: 9869838<br>
-                        Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
-      Skype: ferjaher<br></div>
+      <div id="apDiv42">
+        <p><strong>Nombre Alumno 5.</strong><br>
+                        Código: <br>
+                        Programa: <br>
+                        Correo electrónico: <br>
+      Skype: <br></div>
 <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
       <article>
         <div id="apDiv33"><img src="img/A1.jpg" width="112" height="115"></div>
-        <div id="apDiv34"><img src="img/A1.jpg" width="112" height="115"></div>
-        <div id="apDiv35"><img src="img/A1.jpg" width="112" height="115"></div>
-        <div id="apDiv36"><img src="img/A1.jpg" width="112" height="115"></div>
-        <div id="apDiv37"><img src="img/A1.jpg" width="112" height="115"></div>
+        <div id="apDiv34"><img src="img/A2.jpg" width="112" height="115"></div>
+        <div id="apDiv35"><img src="img/A3.jpg" width="112" height="115"></div>
+        <div id="apDiv36"><img src="img/A4.jpg" width="112" height="115"></div>
+        <div id="apDiv37"><img src="img/A5.jpg" width="112" height="115"></div>
       </article>
     </section>
     <aside> 
