--- a/multimedia.html
+++ b/multimedia.html
@@ -11,18 +11,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
-        <style type="text/css">
-        #apDiv28 {
-	position: absolute;
-	width: 713px;
-	height: 44px;
-	z-index: 13;
-	left: 0px;
-	top: 240px;
-	border-radius: 10px 0px 0px 0px;
-	background-color: #003F5E;
-}
-        </style>
+
     </head>
     <body>	
         <Div id="contenidos">
@@ -73,27 +62,19 @@
                 </div>
     </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
-    <div id="apDiv28"><ul class="dropdownmenu">
-  
-    <li><a href="quiz.html">Quiz</a></li>
-    <li><a href="sopa.html">Sopa  de Letras</a></li>
-    <li><a href="crucigrama.html">Crucigrama</a>
-      <li><a href="completar.html">Completar</a></li>
-    <li><a href="relacionar.html">Relacionar respuestas</a></li>
-  </ul>
-</div>
-<section>
+    <section>
   
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+  <br><br>
+    <h2>Ver el siguiente video</h2>
                 <article>
-                    <figure>
-                        <img src="img/integracion.png" alt="Diseno">
-                  	</figure>
-                    <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
+                    
+                      <div id="apDiv31"><br>
+                      </div>
+                  <div id="apDiv32">Multimedia</div>
+                    
+                    <div id="apDiv43"><iframe width="630" height="350" src="https://www.youtube.com/embed/Z-rfSPH3ZQA" frameborder="0" allowfullscreen></iframe></div>
+                    <p>Aqui texto explicativo del video<br>
                     </p>
       			</article>
     </section>
