--- a/multimedia.html
+++ b/multimedia.html
@@ -72,8 +72,8 @@
                       <div id="apDiv31"><br>
                       </div>
                   <div id="apDiv32">Multimedia</div>
-                    
-                    <div id="apDiv43"><iframe width="630" height="350" src="https://www.youtube.com/embed/Z-rfSPH3ZQA" frameborder="0" allowfullscreen></iframe></div>
+                    <div id="apDiv43"><img src="img/VIDEO.jpg" width="630" height="350"> </div>
+                <!--      <div id="apDiv43"><iframe width="630" height="350" src="https://www.youtube.com/embed/Z-rfSPH3ZQA" frameborder="0" allowfullscreen></iframe></div>--> 
                     <p>Aqui texto explicativo del video<br>
                     </p>
       			</article>
