nuevo sitio web
ubicar flecha

--- a/actividades.html
+++ b/actividades.html
@@ -83,7 +83,7 @@
                   	</figure>
                     <p>
                   En esta sección encontrarás cinco activodades interactivas, en las cuales pondrás a prueba tus conocimientos básicos sobre Seguridad Informática: Quiz, Sopa de letras, Crucigrama, Completar textos y oraciones y Relacionar respuestas conceptuales. </p>
-                    <p><strong>Ddar clic en el boton de la acticvidad deseada!.! Mucha Suerte!</strong><br>
+                    <p><strong>Hacer clic en el boton de la acticvidad deseada!.! Mucha Suerte!</strong><br>
                     </p>
       			</article>
     </section>
